--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <h1>Dice Roller</h1>
         <label># of dice:</label>
-        <input type="number" min="1" value="1" class="in">
+        <input type="number" min="1" max="100" value="1" class="in">
         <button id="rollbtn">Roll Dice</button>
         <div id="diceResult"></div>
         <div id="diceImages"></div>
